src/objects/ContactMethod__c.object
<CustomObject>
    <fields>
        <fullName>ContactMethodGroupLastUpdateDate__c</fullName>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ContactMethodGroupLastUpdateUser__c</fullName>
        <label>Last Update User</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMethodType__c</fullName>
        <label>Type Code</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100001</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactMethodUsageValue__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>ContactMethodValue__c</controllingField>
            <picklistValues>
                <fullName>Home Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage Primary Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage Business Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Primary Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Business Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cellular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facsimile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Telephone-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Telephone-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cellular-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Telephone-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Phone-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage Primary Phone-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage Business Phone-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Primary Phone-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Business Phone-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening Phone-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Phone-Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Phone-Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactMethodValue__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Telephone Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Methods</relationshipLabel>
        <relationshipName>Contact_Method</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <description>This will be sent back to Salesforce if MDM encounters an error.   It is a concatenation of the SF Id and Last Modified Date Time.</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(LastModifiedDate), &apos;Z&apos;, &apos;.&apos; + MID(TEXT(MOD(MOD(LastModifiedDate - $System.OriginDateTime, 1), 86400)), 3, 3)),&apos;-&apos;,&apos;&apos;),&apos;:&apos;,&apos;&apos;),&apos; &apos;,&apos;&apos;),&apos;.&apos;,&apos;&apos;)</formula>
        <label>Correlation Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_from_New_contact_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from New contact Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invalid_Email__c</fullName>
        <label>Invalid Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceNumber__c</fullName>
        <encrypted>true</encrypted>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SolicitationIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solicitation Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceIdentifierValue__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>WARRANTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Banking System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Line Data Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Data Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Office System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual MDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR NAMEADDRCHG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR REGIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR TRANSFER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR CRUPDATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEALERMASTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODELMASTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADAPOST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RECALLCAMPAIGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMIRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYACURAHOND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISKY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEALERPOSTALCODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALESFORCEEXACTTARGET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALEFORCEDESK2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RDR RTNMAIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UCID__c</fullName>
        <label>UCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Method</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Contact Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Method</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Create_or_Update_ContactMethod</fullName>
        <active>true</active>
        <description>Cannot create a Contact Method if a contact does not have a primary email, or a primary phone.</description>
        <errorConditionFormula>NOT(BEGINS($Profile.Name, &quot;API -&quot;)) &amp;&amp; Not(ISPICKVAL( ContactMethodUsageValue__c ,&apos;Primary Phone&apos;)) &amp;&amp; Not(ISPICKVAL( ContactMethodUsageValue__c ,&apos;Primary Email&apos;)) &amp;&amp; NOT(ISBLANK( Contact__r.Id)) &amp;&amp; (ISBLANK(Contact__r.Phone) &amp;&amp; ISBLANK(Contact__r.Email) &amp;&amp;  ISBLANK(Contact__r.MailingCity) &amp;&amp; ISBLANK(Contact__r.MailingCountry))</errorConditionFormula>
        <errorMessage>Cannot create a Contact Method if a contact does not have a primary Address, a primary email, or a primary phone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Email_Address_Format</fullName>
        <active>true</active>
        <description>If Method = &quot;Email Address&quot;, the field Value should have an email address format</description>
        <errorConditionFormula>IF(NOT(BEGINS($Profile.Name, &quot;API -&quot;)) &amp;&amp; NOT(ISBLANK(Text(ContactMethodValue__c))) &amp;&amp; ISPICKVAL(ContactMethodValue__c,&apos;Email Address&apos;), NOT(REGEX(ReferenceNumber__c ,&quot;[a-zA-Z0-9\\.\\!\\#\\$\\%\\&amp;\\*\\/\\=\\?\\^\\_\\+\\-\\`\\{\\|\\}\\~\&apos;._%+-]+@[a-zA-Z0-9\\-.-]+\\.[a-zA-Z]+&quot;)),false)</errorConditionFormula>
        <errorDisplayField>ReferenceNumber__c</errorDisplayField>
        <errorMessage>Not a valid Email Address format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_is_greater_than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(BEGINS($Profile.Name, &quot;API -&quot;)), StartDate__c &gt; EndDate__c )</errorConditionFormula>
        <errorMessage>Start Date cannot be greater than End Date</errorMessage>
    </validationRules>
</CustomObject>